--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,8 +10,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: jakejarvis/s3-sync-action@v0.5.0
+    - uses: actions/checkout@1.0.0
+    - uses: ./.github/actions/s3-sync-action
       with:
         args: 
       env:
