--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,4 +20,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ap-southeast-2'   # optional: defaults to us-east-1
         SOURCE_DIR: ''      # optional: defaults to entire repository
-        DEST_DIR: 'website'
+        DEST_DIR: 'test_github_s3_sync'
