--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,6 +16,7 @@ jobs:
         args: --delete
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        TOKEN_ISSUER: 'https://localhost:5000/auth/authorize'
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
