--- a/.github/workflows/workflow-develop.yml
+++ b/.github/workflows/workflow-develop.yml
@@ -4,7 +4,7 @@ name: s3 Sync
 on:
   push:
     branches:
-    - master
+    - develop
 
 jobs:
   deploy:
@@ -16,7 +16,7 @@ jobs:
         args: --delete --exclude 'node_modules/*' '.git/*'
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        AWS_S3_BUCKET: 'ghost-wendy-uat' # ${{ secrets.AWS_S3_BUCKET }}
+        AWS_S3_BUCKET: 'ghost-wendy-dev' # ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ap-southeast-2'   # optional: defaults to us-east-1
