--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "soulmachines-satellite",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Web UI for Westpac's digital human",
   "main": "webpack.config.js",
   "scripts": {
@@ -15,13 +15,15 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@soulmachines/smwebsdk": "^6.4.3",
+    "@soulmachines/smwebsdk": "^6.4.5",
     "animated-scroll-to": "^1.2.2",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "clean-webpack-plugin": "^0.1.19",
+    "core-js": "^3.4.1",
+    "detect-browser": "^4.8.0",
     "eslint": "^5.4.0",
     "eslint-config-strongloop": "^2.1.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -39,14 +41,15 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
-    "react-svg": "^8.0.3",
     "react-transition-group": "^2.9.0",
+    "react-video-cover": "^1.2.2",
     "redux": "^4.0.4",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "simplebar-react": "^1.1.0",
     "styled-components": "^4.3.2",
     "styled-normalize": "^8.0.6",
+    "svg-sprite-loader": "^4.1.6",
     "svgo": "^1.3.0",
     "svgo-loader": "^2.2.1",
     "webpack": "^4.38.0",
